styling re-added to scrollbar but needs to be fixed on the board div

--- a/public/css/board.css
+++ b/public/css/board.css
@@ -4,7 +4,6 @@
     margin-top: 0.75rem;
     flex-direction: row;
     align-items: flex-start;
-    overflow-x: scroll;
     left: 0;
     right: 0;
     padding: 0 1.5rem;
